# nft

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  dfx.json  icrc7.did  icrc7.rs
cmdline/: Cargo.toml  metadata.json  new_metadata.json  new_nft_version_identity.pem
cmdline/src/: cli.rs  commands.rs  main.rs  metadata.rs  prompts.rs  utils.rs
cmdline/src/calls/: mint.rs  mod.rs  permissions.rs  uploads.rs
example/: README.md  _local_dfx.json  _remote_dfx.json  canister_ids.json  deploy_collection.sh  dfx.json
integrations_tests/: Cargo.toml  README.md
integrations_tests/src/: lib.rs  utils.rs  wasms.rs
integrations_tests/src/client/: core_nft.rs  indexer.rs  macros.rs  mod.rs  pocket.rs  storage.rs
integrations_tests/src/core_suite/setup/: mod.rs  setup.rs  setup_core.rs
integrations_tests/src/core_suite/tests/: mod.rs  test_icrc3.rs  test_icrc37.rs  test_icrc7.rs  test_management.rs  test_run_job_at.rs
integrations_tests/src/index_suite/: mod.rs
integrations_tests/src/index_suite/setup/: mod.rs  setup.rs  setup_core.rs  setup_index.rs
integrations_tests/src/index_suite/tests/: mod.rs  test_index.rs
integrations_tests/src/storage_suite/assets/: sbl_hero_1080_1.mp4.REMOVED.git-id
integrations_tests/src/storage_suite/setup/: mod.rs  setup.rs  setup_storage.rs
integrations_tests/src/storage_suite/tests/: mod.rs  test_storage.rs  test_storage_upgrade.rs
scripts/: build.sh  build_all.sh  generate_did.sh  run_integrations_tests.sh
src/core/: Cargo.toml
src/core/src/: lib.rs  memory.rs  state.rs  storage.rs  sub_canister_manager.rs  utils.rs
src/core/src/lifecycle/: init.rs  post_upgrade.rs
src/core/src/queries/: icrc37.rs  icrc7.rs  mod.rs
src/core/src/types/: collection_metadata.rs  icrc7.rs  management.rs  metadata.rs  mod.rs  nft.rs  nft_metadata.rs
src/core/src/updates/: icrc7.rs  management.rs  mod.rs
src/core_api/: Cargo.toml
src/core_api/src/: lib.rs  utils.rs
src/core_api/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs
src/core_api/src/queries/: get_data.rs
src/core_api/src/types/: mod.rs
src/core_api/src/updates/: insert_data.rs  mod.rs  remove_data.rs  update_data.rs
src/core_nft/: Cargo.toml
src/core_nft/src/: guards.rs  lib.rs  memory.rs  state.rs  sub_canister_manager.rs  subcanister_interface.rs  utils.rs
src/core_nft/src/jobs/: upload_garbage_collector.rs
src/core_nft/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
src/core_nft/src/migrations/types/: state.rs
src/core_nft/src/queries/: http_request.rs  icrc21.rs  icrc3.rs  icrc37.rs  icrc7.rs  mod.rs
src/core_nft/src/types/: collection_metadata.rs  http.rs  icrc21.rs  icrc3.rs  icrc37.rs  icrc7.rs  management.rs  metadata.rs  mod.rs  nft.rs  nft_metadata.rs  permissions.rs  sub_canister.rs  transaction.rs  value_custom.rs  wrapped_types.rs
src/core_nft/src/updates/: icrc37.rs  icrc7.rs  management.rs  mod.rs
src/external_canisters/icrc_ledger/api/: Cargo.toml
src/external_canisters/icrc_ledger/api/src/: main.rs
src/external_canisters/icrc_ledger/api/src/lifecycle/: init.rs
src/external_canisters/icrc_ledger/api/src/queries/: icrc1_minting_account.rs  icrc2_allowance.rs  mod.rs
src/external_canisters/icrc_ledger/c2c_client/: Cargo.toml
src/external_canisters/icrc_ledger/c2c_client/src/: lib.rs
src/external_canisters/storage_canister/c2c_client/: Cargo.toml
src/external_canisters/storage_canister/c2c_client/src/: lib.rs
src/index_icrc7/: Cargo.toml
src/index_icrc7/src/: blocks.rs  cache.rs  guards.rs  index.rs  jobs.rs  lib.rs  memory.rs  state.rs  types.rs  utils.rs  wrapped_values.rs
src/index_icrc7/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
src/index_icrc7/src/queries/: get_blocks.rs  http_request.rs  mod.rs  queries.rs
src/index_icrc7/src/update/: get_blocks.rs  mod.rs
src/index_icrc7/wasm/: can.did  index_icrc7.wasm
src/libraries/canister_client/src/: lib.rs
src/libraries/canister_client_macros/: Cargo.toml
src/libraries/canister_client_macros/src/: lib.rs
src/libraries/canister_time/src/: lib.rs
src/libraries/canister_timer_jobs/: Cargo.toml
src/libraries/canister_timer_jobs/job_macros/: Cargo.toml
src/libraries/canister_timer_jobs/job_macros/src/: lib.rs
src/libraries/canister_timer_jobs/src/: lib.rs  timer_manager.rs
src/libraries/http_request/: Cargo.toml
src/libraries/http_request/src/: lib.rs  router.rs
src/libraries/ledger_utils/: Cargo.toml
src/libraries/ledger_utils/src/: lib.rs  nns.rs
src/libraries/stable_memory/src/: lib.rs
src/libraries/subcanister_manager/: Cargo.toml
src/libraries/subcanister_manager/src/: lib.rs
src/libraries/types/src/: lib.rs  neuron_info.rs  proposals.rs  rewards_recipients.rs  token.rs
src/libraries/utils/: Cargo.toml
src/libraries/utils/src/: consts.rs  env.rs  lib.rs  memory.rs  principal.rs  rand.rs  retry_async.rs  time.rs
src/libraries/utils/src/canister/: deposit_cycles.rs  mod.rs
src/storage_api_canister/: Cargo.toml
src/storage_api_canister/src/: lib.rs  utils.rs
src/storage_api_canister/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs
src/storage_api_canister/src/queries/: get_data.rs  get_storage_size.rs  http_request.rs  http_request_raw_callback.rs  mod.rs
src/storage_api_canister/src/types/: mod.rs  storage.rs  value_custom.rs
src/storage_api_canister/src/updates/: cancel_upload.rs  delete_file.rs  finalize_upload.rs  init_upload.rs  insert_data.rs  mod.rs  remove_data.rs  store_chunk.rs  update_data.rs
src/storage_canister/: Cargo.toml  README.md
src/storage_canister/src/: guards.rs  lib.rs  memory.rs  state.rs  utils.rs
src/storage_canister/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs
src/storage_canister/src/queries/: http_request.rs  management.rs  mod.rs  storage.rs
src/storage_canister/src/types/: http.rs  management.rs  mod.rs  storage.rs
src/storage_canister/src/updates/: mod.rs  storage.rs
