[workspace]
members = [
    "integrations_tests",
    "src/core_nft",
    "src/storage_canister",
    "src/storage_api_canister",
    "src/external_canisters/storage_canister/c2c_client",
    "cmdline"
]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"


[workspace.dependencies]
candid = { version = "0.10.13", features = ["value"] }
ciborium = "0.2.2"
futures = "0.3.29"
# Enable `custom` feature of k256's getrandom dependency. See icp_neuron/impl/src/ecdsa.rs for more details.
getrandom = { version = "0.3.2", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.11.0"
ic-ledger-types = "0.14.0"
ic-stable-structures = "0.6.8"
ic-transport-types = "0.40.0"
ic0 = "0.23.0"
icrc-ledger-types = "0.1.8"
k256 = "0.13.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rmp-serde = "1.1.2"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_cbor = "0.11.2"
serde_json = "1.0.140"
serde_with = "3.7.0"
serde_yaml = "0.9.29"
serde_tokenstream = "0.2.2"
sha2 = "0.10.8"
syn = "2.0.100"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
num-bigint = "0.4.4"
time = { version = "0.3.41", features = [
  "macros",
  "serde",
  "parsing",
  "formatting",
] }
pocket-ic = "9.0.1"
async-trait = "0.1.88"
enum_dispatch = "0.3.13"
typetag = "0.2.18"
minicbor = { version = "1.0.0", features = ["alloc", "derive"] }
canfund = "0.8.2"
ic-asset-certification = "3.0.3"
ic-http-certification = "3.0.3"
lazy_static = "1.4.0"
url = "2.5.4"

bity-ic-canister-client         = "0.1.3"
bity-ic-canister-logger         = "0.1.0"
bity-ic-canister-state-macros   = "0.1.0"
bity-ic-canister-tracing-macros = "0.1.0"
bity-ic-canister-time           = "0.1.0"
bity-ic-serializer              = "0.1.0"
bity-ic-stable-memory           = "0.1.0"
bity-ic-types                   = "0.1.0"
bity-ic-utils                   = "0.1.0"
bity-ic-subcanister-manager     = "0.2.4"
bity-ic-icrc3                   = "0.2.5"
bity-ic-icrc3-macros            = "0.2.0" 