[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = { workspace = true}
candid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
types = { path = "../src/libraries/types" }
utils = { path = '../src/libraries/utils' }
canister_time = { path = '../src/libraries/canister_time' }
icrc-ledger-types = { workspace = true }
icrc-ledger-types-ic-main-repo =  { package = "icrc-ledger-types", git = "https://github.com/dfinity/ic.git", rev = "1488a310043f6a0907f4a84ba7af00e3d90d16eb" }
ic-ledger-types = { workspace = true }
rand = "0.9.0"
lazy_static = "1.4.0"
hex = "0.4"
sha2 = "0.10.8"
serde_bytes = { workspace = true }
serde_json = { workspace = true }
core_nft = { path = "../src/core_nft"}
storage_api_canister = { path = "../src/storage_api_canister", features = []}
ic-cdk = { workspace = true }
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
ic-agent = { version = "0.39.3"}
ic-http-gateway = { version = "0.2.0"}
http = "1.2.0"
bytes = "1.1.0"
http-body-util = "0.1.2"
url = "2.5.4"