[package]
name = "storage_api_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []  # Empty default features
inttest = []

[dependencies]
candid = { workspace = true }
bity-ic-types = { workspace = true}
bity-ic-utils = { workspace = true}
bity-ic-canister-logger = { workspace = true}
bity-ic-canister-state-macros = { workspace = true}
bity-ic-canister-tracing-macros = { workspace = true}
bity-ic-canister-time = { workspace = true}
bity-ic-serializer = { workspace = true}
bity-ic-stable-memory = { workspace = true}
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
icrc-ledger-types = { workspace = true }
async-trait = { workspace = true }
enum_dispatch = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ic-http-certification = { workspace = true}
