[package]
name = "storage_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []  # Empty default features
inttest = []

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
icrc-ledger-types = { workspace = true }
async-trait = { workspace = true }
enum_dispatch = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ic0 = { workspace = true }
ic-asset-certification = { workspace = true}
ic-http-certification = { workspace = true}

storage_api_canister = { path = "../storage_api_canister", features = []}

bity-ic-canister-client = "0.1.0"
bity-ic-canister-logger = "0.1.0"
bity-ic-canister-state-macros = "0.1.0"
bity-ic-canister-tracing-macros = "0.1.0"
bity-ic-canister-time = "0.1.0"
bity-ic-serializer = "0.1.0"
bity-ic-stable-memory = "0.1.0"
bity-ic-types = "0.1.0"
bity-ic-utils = "0.1.0"
