[package]
name = "canister_timer_jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
types = { path = "../types" }
utils = { path = "../utils" }
tracing = { workspace = true }
ic-cdk = { workspace = true }
job_macros = { path = "./job_macros" }

[dev-dependencies]
tokio = {version = "1.39.2", features = ["rt", "macros"]}
