[package]
name = "subcanister_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
utils = { path = "../utils" }