[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
canister_time = { path = "../canister_time" }
icrc-ledger-types = { workspace = true }
ic-cdk = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
stable_memory = { path = "../stable_memory" }
types = { path = "../types" }
tracing = { workspace = true }
ic-cdk-timers = { workspace = true }
tokio = { version = "1.39.2", features = ["macros", "rt"]}