[package]
name = "icrc_ledger_canister_c2c_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
icrc_ledger_canister = { path = "../api" }
bity-ic-canister-client = { workspace = true }
bity-ic-types = { workspace = true }