[package]
name = "storage_canister_c2c_client"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage_canister = { path = "../../../storage_canister", features = [] }
storage_api_canister = { path = "../../../storage_api_canister", features = [] }
bity-ic-canister-client = { workspace = true }
ic-cdk = { workspace = true }
candid = { workspace = true }
bity-ic-types = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
